[gd_scene load_steps=24 format=3 uid="uid://ie7jf53t0gnf"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_8deir"]
[ext_resource type="Theme" uid="uid://bln0pt6y4g1m6" path="res://theme.tres" id="2_xf1vg"]
[ext_resource type="AudioStream" uid="uid://cet4c7i21mj0i" path="res://assets/audio/lebron james reloaded song_2.mp3" id="3_a2faw"]
[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="4_ddc3v"]
[ext_resource type="Script" path="res://scripts/customization.gd" id="4_jyetr"]
[ext_resource type="Texture2D" uid="uid://bjc4epjwdrere" path="res://assets/images/walk.png" id="5_lybql"]
[ext_resource type="Script" path="res://scripts/worlds.gd" id="7_3vxkc"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="7_ceyti"]
[ext_resource type="Theme" uid="uid://bwdmo4f40lbgy" path="res://settings_theme.tres" id="8_3vsdl"]
[ext_resource type="Script" path="res://scripts/credits.gd" id="9_pdi0n"]

[sub_resource type="Animation" id="Animation_nw8kr"]
resource_name = "tilting"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bn1c"]
_data = {
"tilting": SubResource("Animation_nw8kr")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak0q1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4evbq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64wnu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xu3x3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5rjy1"]

[sub_resource type="Animation" id="Animation_t7bm0"]
resource_name = "move_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Vector2(1175, 92), Vector2(800, 92)]
}

[sub_resource type="Animation" id="Animation_p00je"]
resource_name = "move_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Vector2(800, 92), Vector2(1175, 92)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6in7r"]
_data = {
"move_in": SubResource("Animation_t7bm0"),
"move_out": SubResource("Animation_p00je")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3de0r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66o2t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sty02"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8deir")

[node name="background_colour" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="title" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title_splash" type="Label" parent="title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 65.0
offset_top = 43.0
offset_right = 1047.0
offset_bottom = 130.0
grow_horizontal = 2
pivot_offset = Vector2(491, 43)
theme = ExtResource("2_xf1vg")
theme_override_font_sizes/font_size = 61
text = "Up from the Lava From as Lebron
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="title/title_splash"]
libraries = {
"": SubResource("AnimationLibrary_7bn1c")
}

[node name="reloaded_splash" type="Label" parent="title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 65.0
offset_top = 111.715
offset_right = 1047.0
offset_bottom = 198.715
grow_horizontal = 2
pivot_offset = Vector2(491, 43)
theme = ExtResource("2_xf1vg")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 56
text = "Reloaded
"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="title/reloaded_splash"]
libraries = {
"": SubResource("AnimationLibrary_7bn1c")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_a2faw")
max_distance = 3.45635e+15

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -77.0
offset_right = 169.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(171, 93.5)
alignment = 1

[node name="play" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xf1vg")
text = "Play"

[node name="settings" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xf1vg")
toggle_mode = true
text = "Cogan"

[node name="download" type="Button" parent="buttons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xf1vg")
text = "Dawn load the Full Game"

[node name="version" type="Button" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 0.054902)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ak0q1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4evbq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_64wnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xu3x3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5rjy1")
text = "0.22"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -136.0
offset_right = 312.0
offset_bottom = 167.0
grow_vertical = 2
clip_tabs = false

[node name="customization" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_jyetr")

[node name="name" type="HSplitContainer" parent="TabContainer/customization"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2

[node name="name_label" type="Label" parent="TabContainer/customization/name"]
layout_mode = 2
text = "name: "

[node name="name_input" type="LineEdit" parent="TabContainer/customization/name"]
layout_mode = 2

[node name="colour_input" type="ColorPicker" parent="TabContainer/customization"]
visible = false
layout_mode = 2
offset_left = 961.0
offset_top = -22.0
offset_right = 1199.0
offset_bottom = 546.0

[node name="colour" type="HSplitContainer" parent="TabContainer/customization"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 33.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="colour_label" type="Label" parent="TabContainer/customization/colour"]
layout_mode = 2
text = "color:  "

[node name="colour_button" type="Button" parent="TabContainer/customization/colour"]
layout_mode = 2
toggle_mode = true
text = "pick a colour for lebron"

[node name="example_name" type="Label" parent="TabContainer/customization"]
layout_mode = 0
offset_left = 12.0
offset_top = 66.0
offset_right = 326.0
offset_bottom = 92.0
text = "JOn"
horizontal_alignment = 1

[node name="lebron" type="TextureRect" parent="TabContainer/customization"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = 91.0
offset_right = 164.0
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.736533, 0.357488)
texture = ExtResource("5_lybql")

[node name="leaderboard" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="people" type="VBoxContainer" parent="TabContainer/leaderboard"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/leaderboard/people"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "The game is getting the scores"

[node name="HTTPRequest" type="HTTPRequest" parent="TabContainer/leaderboard"]
script = ExtResource("4_ddc3v")

[node name="worlds" type="ScrollContainer" parent="TabContainer"]
layout_mode = 2
script = ExtResource("7_3vxkc")

[node name="GridContainer" type="GridContainer" parent="TabContainer/worlds"]
layout_mode = 2
columns = 4

[node name="Label" type="Label" parent="TabContainer/worlds/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "worlds coming later in life"

[node name="settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1175.0
offset_top = 92.0
offset_right = 1175.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ceyti")

[node name="background" type="ColorRect" parent="settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.53, 0.78)
color = Color(0.243137, 0.243137, 0.243137, 0.713726)

[node name="AnimationPlayer" type="AnimationPlayer" parent="settings"]
libraries = {
"": SubResource("AnimationLibrary_6in7r")
}

[node name="settings_box" type="VBoxContainer" parent="settings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.304
anchor_bottom = 0.779
offset_right = -0.207123
offset_bottom = 0.207977
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_3vsdl")

[node name="iggames" type="Button" parent="settings/settings_box"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0.282353, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_3de0r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66o2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_sty02")
text = "igGames ProductionsÂ©"
alignment = 0

[node name="music" type="HSplitContainer" parent="settings/settings_box"]
layout_mode = 2
dragger_visibility = 2

[node name="music_label" type="Label" parent="settings/settings_box/music"]
layout_mode = 2
text = "music: "

[node name="music_checkbox" type="CheckBox" parent="settings/settings_box/music"]
layout_mode = 2
theme_override_font_sizes/font_size = 56

[node name="single_player" type="HSplitContainer" parent="settings/settings_box"]
layout_mode = 2
dragger_visibility = 2

[node name="label" type="Label" parent="settings/settings_box/single_player"]
layout_mode = 2
text = "single player: "

[node name="check_box" type="CheckBox" parent="settings/settings_box/single_player"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
disabled = true

[node name="custom_server" type="HSplitContainer" parent="settings/settings_box"]
layout_mode = 2
dragger_visibility = 2

[node name="label" type="Label" parent="settings/settings_box/custom_server"]
layout_mode = 2
text = "custom server: "

[node name="LineEdit" type="LineEdit" parent="settings/settings_box/custom_server"]
layout_mode = 2
placeholder_text = "127.0.0.1"
editable = false

[node name="debug_mode" type="HSplitContainer" parent="settings/settings_box"]
layout_mode = 2
dragger_visibility = 2

[node name="label" type="Label" parent="settings/settings_box/debug_mode"]
layout_mode = 2
text = "debug mode: "

[node name="LineEdit" type="LineEdit" parent="settings/settings_box/debug_mode"]
layout_mode = 2
editable = false

[node name="ui_scale" type="HSplitContainer" parent="settings/settings_box"]
layout_mode = 2
dragger_visibility = 2

[node name="label" type="Label" parent="settings/settings_box/ui_scale"]
layout_mode = 2
text = "ui scale: "

[node name="HSlider" type="HSlider" parent="settings/settings_box/ui_scale"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.1
editable = false
tick_count = 15
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="settings/settings_box"]
layout_mode = 2

[node name="credits_title" type="Label" parent="settings/settings_box"]
layout_mode = 2
text = "credits:"

[node name="credits" type="ScrollContainer" parent="settings/settings_box"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("9_pdi0n")

[node name="VBoxContainer" type="VBoxContainer" parent="settings/settings_box/credits"]
layout_mode = 2

[node name="iggames" type="Button" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0.282353, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_3de0r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66o2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_sty02")
text = "CashIgnitro:
    - General programming
    - Founder
"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2

[node name="websoket" type="Button" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0.282353, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_3de0r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66o2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_sty02")
text = "Websoket:
    - Creation of levels:
        - Level 1
    - \"Lava is Rising\" idea"
alignment = 0

[node name="HSeparator2" type="HSeparator" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2

[node name="cattag" type="Button" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0.282353, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_3de0r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66o2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_sty02")
text = "CatTag:
    - Suggestion to use lebron."
alignment = 0

[node name="HSeparator3" type="HSeparator" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2

[node name="speedrunsed" type="Button" parent="settings/settings_box/credits/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0.282353, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_3de0r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66o2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_sty02")
text = "speedrunsed:
    - Telling me to add a speedrun timer"
alignment = 0

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_finished"]
[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="buttons/play" to="TabContainer/customization" method="_on_play_pressed"]
[connection signal="toggled" from="buttons/settings" to="." method="_on_settings_toggled"]
[connection signal="pressed" from="buttons/download" to="." method="_on_download_pressed"]
[connection signal="gui_input" from="version" to="." method="_on_version_gui_input"]
[connection signal="mouse_entered" from="version" to="." method="_on_version_mouse_entered"]
[connection signal="pressed" from="version" to="." method="_on_version_pressed"]
[connection signal="toggled" from="TabContainer/customization/colour/colour_button" to="." method="_on_colour_button_toggled"]
[connection signal="toggled" from="TabContainer/customization/colour/colour_button" to="TabContainer/customization" method="_on_colour_button_toggled"]
[connection signal="pressed" from="settings/settings_box/iggames" to="settings" method="_on_iggames_pressed"]
[connection signal="drag_ended" from="settings/settings_box/ui_scale/HSlider" to="settings" method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="settings/settings_box/ui_scale/HSlider" to="settings" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="settings/settings_box/credits/VBoxContainer/iggames" to="settings" method="_on_iggames_pressed"]
[connection signal="pressed" from="settings/settings_box/credits/VBoxContainer/iggames" to="settings/settings_box/credits" method="_on_iggames_pressed"]
[connection signal="pressed" from="settings/settings_box/credits/VBoxContainer/websoket" to="settings/settings_box/credits" method="_on_websoket_pressed"]
[connection signal="pressed" from="settings/settings_box/credits/VBoxContainer/speedrunsed" to="settings/settings_box/credits" method="_on_speedrunsed_pressed"]
